--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div>
       <div class="navRight">
         <div class="boxs">
-          <a href="" style="text-decoration: none">Your Account</a>
+          <a href="" style="text-decoration: none" id="signup">Your Account</a>
         </div>
         <div class="boxs">
           <a href="" style="text-decoration: none">Help</a>
@@ -50,19 +50,12 @@
     <!--     Contain              -->
     <div id="contain">
       <div class="trendingCont">
-        <div id="trendPage" style="background-image: url(sale.avif)"></div>
+        <div id="trendPage" style="background-image: url(trendc.png)"></div>
       </div>
 
       <div class="block">
         <ul id="search-result">
-          <div class="product"></div>
-          <div class="product"></div>
-          <div class="product"></div>
-          <div class="product"></div>
-          <div class="product"></div>
-          <div class="product"></div>
-          <div class="product"></div>
-          <div class="product"></div>
+         
         </ul>
       </div>
       <div class="mainContain">
@@ -120,5 +113,6 @@
         <div class="copy">Intrest Based Ads</div>
       </div>
     </div>
+    <script src="sc.js"></script>
   </body>
 </html>
